Revision history for Perl extension Alien::wxWidgets.

0.56  TBR

0.55  Tue Feb 28 2012
    - Correctly interpret boolean option = 1 as 'yes' 
      ( Thanks to Robert Olsen )  
    - Fix for msw builds where Perl defines -D_USE_32BIT_TIME_T 
      ( Thanks to Bjoern Hoehrmann )
    - Fix for Xcode 4.3 on OSX Lion
    - Allow build 2.9.3 wxWidgets (default for 64 bit Mac)

0.54  Wed Nov 09 08:00:00 BST 2011
    - Remove force of static binding for mingw libgcc & libstdc++
    - For mingw, properly detect the gcc shared lib dependencies
      to install
0.53  Thu Oct 13 08:00:00 BST 2011 
    - SDK fix for 2.8.x on Mac OSX Lion
    - 2.9.2 default for 64bit MacOSX
    - 2.9.2 build changes for msw supporting mingw/gcc >= 4.5.2
    - 2003 Platform SDK build fixed for 2.8.12

0.52  Thu May 05 08:00:00 BST 2011
    - release 0.51_01 as 0.52

0.51_01 Thu Apr 21 22:28:51 BST 2011
    - 64 bit mingw printing fix
    - 2.9.1 default for 64bit MacOSX
    - 2.8.12 general default

0.51  Tue Mar 30 22:28:51 CEST 2010
    - Build fix for Perl 5.12.

0.50_02  Sun Mar 21 10:33:00 CET 2010
    - Fixed 64 bit compilation when using the MinGW-w64 compiler.

0.50_01  Fri Feb 26 17:08:21 CET 2010
    - Added wxWidgets-extraflags build option.
    - Exit with an error message under Cygwin.
    - Use the system version of Archive::Extract and File::Fetch
      if newer than the bundled version.

0.50  Sun Jan 10 16:16:44 CET 2010
    - When compiling on Windows with MSVC 9, make the generated
      wxWidgets DLL load correctly by adding a manifest to them
      (suggested by IKEGAMI).
    - Add a missing file to the distribution.

0.49  Sat Jan  9 10:39:02 CET 2010
    - Support GCC 4 and 64 bit GCC builds on Windows (patch by KMX).
    - Fix monolithic build handling for wxWidgets' 2.8.x.

0.48  Fri Dec 25 18:23:56 CET 2009
    - Fix the compiler check for Visual C++.

0.47  Sat Dec  5 16:16:05 CET 2009
    - Released 0.46_01 as 0.47.

0.46_01  Tue Nov 24 20:34:25 CET 2009